# gasyori100

./: .gitignore  README.md  pyproject.toml  week_01.ipynb  week_02.ipynb  week_03.ipynb  week_04.ipynb
.ipynb_checkpoints/: week_01-checkpoint.ipynb
notebooks/: fourier_transform.ipynb  tutorial.ipynb  week_04.ipynb  week_06.ipynb  week_07.ipynb  week_09.ipynb
