[tool.poetry]
name = "gasyori"
version = "0.1.0"
description = ""
authors = ["Shin Chu <cougousei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
opencv-python = "^4.5.1"
sklearn = "^0.0"
jupyterlab = "^3.0.14"
scikit-image = "^0.18.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
